fixup! fixes various spacing issues

--- a/rulesets/output/ap-biology.css
+++ b/rulesets/output/ap-biology.css
@@ -1101,7 +1101,7 @@
   move-to: bCaption; }
 :pass(5) [data-type="chapter"] :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(table);
+  content: counter(chapter) "." counter(table) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(5) [data-type="chapter"] :not(table) > table:not(.unnumbered) caption {
@@ -1159,7 +1159,7 @@
   move-to: bCaption; }
 :pass(5) [data-type="chapter"] :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(figure);
+  content: counter(chapter) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(5) [data-type="chapter"] :not(figure) > figure:not(.unnumbered) figcaption {
@@ -1188,7 +1188,7 @@
   move-to: bCaption; }
 :pass(5) .appendix :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(appendix,upper-alpha) counter(figure);
+  content: counter(appendix,upper-alpha) counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(5) .appendix :not(figure) > figure:not(.unnumbered) figcaption {
